test-cases/valid/reject/lessthan_mismatched_operand_types.ul
void main() {
    println 'c' < "d"; // LHS and RHS types must match.
}
